--- a/index.html
+++ b/index.html
@@ -21,147 +21,146 @@
     <div class="profile-section">
 
         <img src="https://sapletta.github.io/about/image.png" alt="Tom Sapletta" class="profile-image">
-        <div class="profile-content">
-            <h1><a href="https://sapletta.com">Tom Sapletta</a> <a href="https://www.digitname.com">DigitName
-                Portfolio</a></h1>
-
-
-            <p class="bio">Tom Sapletta is a researcher at <a href="https://softreck.com/">Softreck</a> and an author
-                whose work focuses on modular SaaS architecture, facilitating bug diagnosis and resolution. He is also
-                developing <a href="https://www.oneday.run/">oneday.run</a>, a scalable infrastructure using <a
-                        href="https://www.apidsl.com">apidsl</a>.</p>
-
-            <div class="professional-summary">
-                <h2>Professional Overview</h2>
-                <p>With over 12 years of experience as a DevOps Engineer, Software Developer, and Systems Architect, I
-                    specialize in creating human-technology connections through innovative solutions. My expertise spans
-                    edge computing, hypermodularization, and automated software development lifecycles, with a focus on
-                    building bridges between complex technical requirements and human needs.</p>
-
-                <p>Currently, as the founder and CEO of <a href="https://www.telemonit.com/">Telemonit</a>, I'm
-                    developing Portigen - an innovative power supply system with integrated edge computing functionality
-                    that enables natural human-machine interactions even in environments with limited connectivity.</p>
-            </div>
-
-            <div class="expertise-areas">
-                <h2>Areas of Expertise</h2>
-                <ul class="expertise-list">
-                    <li><strong>DevOps & Cloud Engineering:</strong> Docker, Kubernetes, CI/CD pipelines, infrastructure
-                        automation
-                    </li>
-                    <li><strong>Software Development:</strong> Java, Python, PHP, NodeJS, microservices architecture
-                    </li>
-                    <li><strong>Edge Computing & IoT:</strong> Distributed systems, sensor networks, real-time
-                        processing
-                    </li>
-                    <li><strong>Hardware-Software Integration:</strong> Embedded systems, power management solutions
-                    </li>
-                    <li><strong>Research:</strong> TextToSoftware, Hypermodularization, Model-Based Systems Engineering
-                    </li>
-                </ul>
-            </div>
-
-            <div class="notable-projects">
-                <h2>Notable Projects</h2>
-
-                <div class="project">
-                    <h3><a href="https://portigen.com">Portigen</a></h3>
-                    <p>An innovative power supply system with edge computing capabilities, providing autonomous energy
-                        solutions for IoT and edge computing applications. Features include 500Wh capacity, ultra-low
-                        latency processing, and modular design for various deployment scenarios.</p>
-                </div>
-
-                <div class="project">
-                    <h3><a href="https://text.to.software">TextToSoftware Ecosystem</a></h3>
-                    <p>Pioneering systems that convert natural language into functional applications, bridging the gap
-                        between human communication and code generation.</p>
-                </div>
-
-                <div class="project">
-                    <h3><a href="https://www.hypermodularization.com">Hypermodularization</a></h3>
-                    <p>Research and implementation of highly modular code architecture methodologies that enhance
-                        maintainability, scalability, and component reusability.</p>
-                </div>
-
-                <div class="project">
-                    <h3><a href="https://pypi.org/user/tom-sapletta-com/">Python Packages</a></h3>
-                    <p>Creator of numerous Python libraries including pifunc, mdirtree, markdown2code, dynapsys, and
-                        more, focusing on automation, modularity, and domain-specific languages (DSLs).</p>
-                </div>
-            </div>
-
-            <div class="publications">
-                <h2>Publications & Creative Works</h2>
-                <ul>
-                    <li>"System sterowania dla osób niepełnosprawnych" (Control System for People with Disabilities) -
-                        Published in Elektronika dla Wszystkich, 1999
-                    </li>
-                    <li>
-                        <a href="https://www.amazon.ca/Hexagonal-Sandbox-smartphones-modular-architecture-ebook/dp/B0CR1RLZYQ">"Hexagonal
-                            Sandbox with Smartphones"</a> - Illustrated book explaining complex hypermodularization
-                        technologies for children
-                    </li>
-                    <li><a href="https://www.hypermodularity.com">Hyper Modularity</a> - Software modularization
-                        insights
-                    </li>
-                    <li><a href="https://www.programista.de">Programista w Niemczech</a> - Insights into working as a
-                        developer in Germany
-                    </li>
-                </ul>
-            </div>
-
-            <div class="professional-experience">
-                <h2>Professional Experience</h2>
-                <div class="experience-item">
-                    <h3>Telemonit, Frankfurt Oder</h3>
-                    <p class="position">Founder & CEO, Hardware and Software Developer</p>
-                    <p class="date">06.2024 – Present</p>
-                    <p>Leading the development and production of Portigen energy supply stations with edge computing
-                        capabilities.</p>
-                </div>
-
-                <div class="experience-item">
-                    <h3>Link11 GmbH, Frankfurt</h3>
-                    <p class="position">DevOps Engineer CDN/DNS</p>
-                    <p class="date">07.2023 – 01.2024</p>
-                    <p>Optimized CDN/DNS services for improved security and performance.</p>
-                </div>
-
-                <div class="experience-item">
-                    <h3>IT-NRW (SEVEN PRINCIPLES AG), Düsseldorf</h3>
-                    <p class="position">Java Developer and DevOps</p>
-                    <p class="date">09.2020 - 04.2023</p>
-                    <p>Developed integration platforms connecting complex systems for public service applications.</p>
-                </div>
-            </div>
-
-            <div class="research-interests">
-                <h2>Research Interests</h2>
-                <p>My research focuses on creating accessible, modular solutions to complex technical challenges. Key
-                    areas include:</p>
-                <ul>
-                    <li>TextToSoftware - Automated Code Generation from Natural Language</li>
-                    <li>Hypermodularization in Software Architecture</li>
-                    <li>Edge Computing and Distributed Systems</li>
-                    <li>Model-Based Systems Engineering (MBSE)</li>
-                    <li>Component-Based Software Development</li>
-                    <li>Digital Twin Technology</li>
-                </ul>
-            </div>
-
-
-            <div class="collaboration">
-                <h2>Collaboration Opportunities</h2>
-                <p>I welcome collaboration in edge computing, hypermodularization, text-to-software technologies, and
-                    open-source hardware/software development. Particularly interested in projects bridging academic
-                    research with practical industry applications and technology education initiatives.</p>
-            </div>
-        </div>
+        <h1><a href="https://sapletta.com">Tom Sapletta</a> <a href="https://www.digitname.com">DigitName
+            Portfolio</a></h1>
 
 
     </div>
 
+    <div class="profile-content">
 
+
+        <p class="bio">Tom Sapletta is a researcher at <a href="https://softreck.com/">Softreck</a> and an author
+            whose work focuses on modular SaaS architecture, facilitating bug diagnosis and resolution. He is also
+            developing <a href="https://www.oneday.run/">oneday.run</a>, a scalable infrastructure using <a
+                    href="https://www.apidsl.com">apidsl</a>.</p>
+
+        <div class="professional-summary">
+            <h2>Professional Overview</h2>
+            <p>With over 12 years of experience as a DevOps Engineer, Software Developer, and Systems Architect, I
+                specialize in creating human-technology connections through innovative solutions. My expertise spans
+                edge computing, hypermodularization, and automated software development lifecycles, with a focus on
+                building bridges between complex technical requirements and human needs.</p>
+
+            <p>Currently, as the founder and CEO of <a href="https://www.telemonit.com/">Telemonit</a>, I'm
+                developing Portigen - an innovative power supply system with integrated edge computing functionality
+                that enables natural human-machine interactions even in environments with limited connectivity.</p>
+        </div>
+
+        <div class="expertise-areas">
+            <h2>Areas of Expertise</h2>
+            <ul class="expertise-list">
+                <li><strong>DevOps & Cloud Engineering:</strong> Docker, Kubernetes, CI/CD pipelines, infrastructure
+                    automation
+                </li>
+                <li><strong>Software Development:</strong> Java, Python, PHP, NodeJS, microservices architecture
+                </li>
+                <li><strong>Edge Computing & IoT:</strong> Distributed systems, sensor networks, real-time
+                    processing
+                </li>
+                <li><strong>Hardware-Software Integration:</strong> Embedded systems, power management solutions
+                </li>
+                <li><strong>Research:</strong> TextToSoftware, Hypermodularization, Model-Based Systems Engineering
+                </li>
+            </ul>
+        </div>
+
+        <div class="notable-projects">
+            <h2>Notable Projects</h2>
+
+            <div class="project">
+                <h3><a href="https://portigen.com">Portigen</a></h3>
+                <p>An innovative power supply system with edge computing capabilities, providing autonomous energy
+                    solutions for IoT and edge computing applications. Features include 500Wh capacity, ultra-low
+                    latency processing, and modular design for various deployment scenarios.</p>
+            </div>
+
+            <div class="project">
+                <h3><a href="https://text.to.software">TextToSoftware Ecosystem</a></h3>
+                <p>Pioneering systems that convert natural language into functional applications, bridging the gap
+                    between human communication and code generation.</p>
+            </div>
+
+            <div class="project">
+                <h3><a href="https://www.hypermodularization.com">Hypermodularization</a></h3>
+                <p>Research and implementation of highly modular code architecture methodologies that enhance
+                    maintainability, scalability, and component reusability.</p>
+            </div>
+
+            <div class="project">
+                <h3><a href="https://pypi.org/user/tom-sapletta-com/">Python Packages</a></h3>
+                <p>Creator of numerous Python libraries including pifunc, mdirtree, markdown2code, dynapsys, and
+                    more, focusing on automation, modularity, and domain-specific languages (DSLs).</p>
+            </div>
+        </div>
+
+        <div class="publications">
+            <h2>Publications & Creative Works</h2>
+            <ul>
+                <li>"System sterowania dla osób niepełnosprawnych" (Control System for People with Disabilities) -
+                    Published in Elektronika dla Wszystkich, 1999
+                </li>
+                <li>
+                    <a href="https://www.amazon.ca/Hexagonal-Sandbox-smartphones-modular-architecture-ebook/dp/B0CR1RLZYQ">"Hexagonal
+                        Sandbox with Smartphones"</a> - Illustrated book explaining complex hypermodularization
+                    technologies for children
+                </li>
+                <li><a href="https://www.hypermodularity.com">Hyper Modularity</a> - Software modularization
+                    insights
+                </li>
+<!--                <li><a href="https://www.programista.de">Programista w Niemczech</a> - Insights into working as a-->
+<!--                    developer in Germany-->
+<!--                </li>-->
+            </ul>
+        </div>
+
+        <div class="professional-experience">
+            <h2>Last Professional Experience</h2>
+            <div class="experience-item">
+                <h3>Telemonit, Frankfurt Oder</h3>
+                <p class="position">Founder & CEO, Hardware and Software Developer</p>
+                <p class="date">06.2024 – Present</p>
+                <p>Leading the development and production of Portigen energy supply stations with edge computing
+                    capabilities.</p>
+            </div>
+
+            <div class="experience-item">
+                <h3>Link11 GmbH, Frankfurt</h3>
+                <p class="position">DevOps Engineer CDN/DNS</p>
+                <p class="date">07.2023 – 01.2024</p>
+                <p>Optimized CDN/DNS services for improved security and performance.</p>
+            </div>
+
+            <div class="experience-item">
+                <h3>IT-NRW (SEVEN PRINCIPLES AG), Düsseldorf</h3>
+                <p class="position">Java Developer and DevOps</p>
+                <p class="date">09.2020 - 04.2023</p>
+                <p>Developed integration platforms connecting complex systems for public service applications.</p>
+            </div>
+        </div>
+
+        <div class="research-interests">
+            <h2>Research Interests</h2>
+            <p>My research focuses on creating accessible, modular solutions to complex technical challenges. Key
+                areas include:</p>
+            <ul>
+                <li>TextToSoftware - Automated Code Generation from Natural Language</li>
+                <li>Hypermodularization in Software Architecture</li>
+                <li>Edge Computing and Distributed Systems</li>
+                <li>Model-Based Systems Engineering (MBSE)</li>
+                <li>Component-Based Software Development</li>
+                <li>Digital Twin Technology</li>
+            </ul>
+        </div>
+
+
+        <div class="collaboration">
+            <h2>Collaboration Opportunities</h2>
+            <p>I welcome collaboration in edge computing, hypermodularization, text-to-software technologies, and
+                open-source hardware/software development. Particularly interested in projects bridging academic
+                research with practical industry applications and technology education initiatives.</p>
+        </div>
+    </div>
     <div class="section" id="contact">
         <h2>Contact Information</h2>
         <div class="contact-container">
