--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h2>Notable Projects</h2>
 
             <div class="project">
-                <h3><a href="https://portigen.com">Portigen</a></h3>
+                <h3><a href="https://www.portigen.com">Portigen</a></h3>
                 <p>An innovative power supply system with edge computing capabilities, providing autonomous energy
                     solutions for IoT and edge computing applications. Features include 500Wh capacity, ultra-low
                     latency processing, and modular design for various deployment scenarios.</p>
