--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="project.js" defer></script>
     <script src="portfolio.js" defer></script>
     <script src="image-preloader.js" defer></script>
+    <script src="https://valid-links.digitname.com/valid-links.js"></script>
 </head>
 <body>
 <div class="loader" id="loader">
@@ -190,7 +191,7 @@
             </div>
             <div class="contact-item">
                 <h3>Polski</h3>
-                <p><a href="https://tom.sapletta.p0l/">tom.sapletta.pl</a></p>
+                <p><a href="https://tom.sapletta.pl/">tom.sapletta.pl</a></p>
             </div>
 
 
