--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                     between human communication and code generation.</p>
             </div>
 
-            <div class="project">
-                <h3><a href="https://www.hypermodularization.com">Hypermodularization</a></h3>
-                <p>Research and implementation of highly modular code architecture methodologies that enhance
-                    maintainability, scalability, and component reusability.</p>
-            </div>
+<!--            <div class="project">-->
+<!--                <h3><a href="https://www.hypermodularization.com">Hypermodularization</a></h3>-->
+<!--                <p>Research and implementation of highly modular code architecture methodologies that enhance-->
+<!--                    maintainability, scalability, and component reusability.</p>-->
+<!--            </div>-->
 
             <div class="project">
                 <h3><a href="https://pypi.org/user/tom-sapletta-com/">Python Packages</a></h3>
@@ -348,7 +348,7 @@
                 <p>Domain security</p>
             </div>
             <div class="domain-item">
-                <h3><a href="https://www.askdomainer.pl/">AskDomainer</a></h3>
+                <h3><a href="https://www.askdomainer.com/">AskDomainer</a></h3>
                 <p>Domain consultation service</p>
             </div>
         </div>
