--- a/index.html
+++ b/index.html
@@ -343,10 +343,10 @@
     <div class="section" id="domains">
         <h2>Internet Domains</h2>
         <div class="domains-container">
-            <div class="domain-item">
-                <h3><a href="http://www.domainleak.com">DomainLeak</a></h3>
-                <p>Domain security</p>
-            </div>
+<!--            <div class="domain-item">-->
+<!--                <h3><a href="http://www.domainleak.com">DomainLeak</a></h3>-->
+<!--                <p>Domain security</p>-->
+<!--            </div>-->
             <div class="domain-item">
                 <h3><a href="https://www.askdomainer.com/">AskDomainer</a></h3>
                 <p>Domain consultation service</p>
@@ -373,14 +373,14 @@
                 <h3><a href="https://dsl.to.software/">dsl.to.software</a></h3>
                 <p>DSL to Software conversion</p>
             </div>
-            <div class="texttosoftware-item">
-                <h3><a href="https://srs.to.software/">srs.to.software</a></h3>
-                <p>Software Requirements Specification to Software</p>
-            </div>
-            <div class="texttosoftware-item">
-                <h3><a href="https://speech.to.software/">speech.to.software</a></h3>
-                <p>Voice to software with assistant integration</p>
-            </div>
+<!--            <div class="texttosoftware-item">-->
+<!--                <h3><a href="https://srs.to.software/">srs.to.software</a></h3>-->
+<!--                <p>Software Requirements Specification to Software</p>-->
+<!--            </div>-->
+<!--            <div class="texttosoftware-item">-->
+<!--                <h3><a href="https://speech.to.software/">speech.to.software</a></h3>-->
+<!--                <p>Voice to software with assistant integration</p>-->
+<!--            </div>-->
         </div>
     </div>
 
