--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <div class="profile-content">
 
 
-        <p class="bio">Tom Sapletta is a researcher at <a href="https://softreck.com/">Softreck</a> and an author
-            whose work focuses on modular SaaS architecture, facilitating bug diagnosis and resolution. He is also
-            developing <a href="https://www.oneday.run/">oneday.run</a>, a scalable infrastructure using <a
-                    href="https://www.apidsl.com">apidsl</a>.</p>
+<!--        <p class="bio">Tom Sapletta is a researcher at <a href="https://softreck.com/">Softreck</a> and an author-->
+<!--            whose work focuses on modular SaaS architecture, facilitating bug diagnosis and resolution. He is also-->
+<!--            developing <a href="https://www.oneday.run/">oneday.run</a>, a scalable infrastructure using <a-->
+<!--                    href="https://www.apidsl.com">apidsl</a>.</p>-->
 
         <div class="professional-summary">
             <h2>Professional Overview</h2>
