--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 building bridges between complex technical requirements and human needs.</p>
 
             <p>Currently, as the founder and CEO of <a href="https://www.telemonit.com/">Telemonit</a>, I'm
-                developing Portigen - an innovative power supply system with integrated edge computing functionality
+                developing <a href="https://www.portigen.com/">Portigen</a> - an innovative power supply system with integrated edge computing functionality
                 that enables natural human-machine interactions even in environments with limited connectivity.</p>
         </div>
 
