--- a/index.html
+++ b/index.html
@@ -298,26 +298,26 @@
         </div>
     </div>
 
-    <div class="section" id="books">
-        <h2>Books</h2>
-        <div class="books-container">
-            <!--            <div class="book-item">-->
-            <!--                <h3><a href="https://www.programista.de">Programista w Niemczech</a></h3>-->
-            <!--                <p>Insights into working as a developer in Germany.</p>-->
-            <!--            </div>-->
-            <div class="book-item">
-                <h3><a href="https://www.hypermodular.com">Hyper Modular Architecture</a></h3>
-                <p>Software modularization insights.</p>
-            </div>
-            <div class="book-item">
-                <h3>
-                    <a href="https://www.amazon.ca/Hexagonal-Sandbox-smartphones-modular-architecture-ebook/dp/B0CR1RLZYQ">Hexagonal
-                        Sandbox with Smartphones</a></h3>
-                <p>Illustrated book explaining complex hypermodularization technologies in an accessible way for
-                    children.</p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="section" id="books">-->
+<!--        <h2>Books</h2>-->
+<!--        <div class="books-container">-->
+<!--            &lt;!&ndash;            <div class="book-item">&ndash;&gt;-->
+<!--            &lt;!&ndash;                <h3><a href="https://www.programista.de">Programista w Niemczech</a></h3>&ndash;&gt;-->
+<!--            &lt;!&ndash;                <p>Insights into working as a developer in Germany.</p>&ndash;&gt;-->
+<!--            &lt;!&ndash;            </div>&ndash;&gt;-->
+<!--            <div class="book-item">-->
+<!--                <h3><a href="https://www.hypermodular.com">Hyper Modular Architecture</a></h3>-->
+<!--                <p>Software modularization insights.</p>-->
+<!--            </div>-->
+<!--            <div class="book-item">-->
+<!--                <h3>-->
+<!--                    <a href="https://www.amazon.ca/Hexagonal-Sandbox-smartphones-modular-architecture-ebook/dp/B0CR1RLZYQ">Hexagonal-->
+<!--                        Sandbox with Smartphones</a></h3>-->
+<!--                <p>Illustrated book explaining complex hypermodularization technologies in an accessible way for-->
+<!--                    children.</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <div class="section" id="services">
         <h2>SaaS Services</h2>
