update to the react version

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="notable-projects">
-            <h2>Notable Projects</h2>
+            <h2>Projects</h2>
 
             <div class="project">
                 <h3><a href="https://www.portigen.com">Portigen</a></h3>
@@ -162,53 +162,66 @@
                 research with practical industry applications and technology education initiatives.</p>
         </div>
     </div>
+
     <div class="section" id="contact">
         <h2>Contact Information</h2>
         <div class="contact-container">
             <div class="contact-item">
                 <h3>ORCID</h3>
                 <p><a href="https://orcid.org/my-orcid?orcid=0009-0000-6327-2810">0009-0000-6327-2810</a></p>
+                <p class="description">                </p>
             </div>
             <div class="contact-item">
                 <h3>GitHub</h3>
                 <p><a href="https://github.com/tom-sapletta-com">tom-sapletta-com</a></p>
+                <p class="description">                </p>
             </div>
             <div class="contact-item">
                 <h3>Python Packages</h3>
                 <p><a href="https://pypi.org/user/tom-sapletta-com/">PyPI</a></p>
+                <p class="description">                </p>
             </div>
             <div class="contact-item">
-                <h3>LinkedIn</h3>
+                <h3>Python Packages</h3>
+                <p><a href="https://pypi.org/user/tom-sapletta-com/">PyPI</a></p>
+                <p class="description">                </p>
+            </div>
+            <div class="contact-item">
+                <h3>LinkedIn Profile</h3>
                 <p><a href="https://www.linkedin.com/in/tom-sapletta-com/">Tom Sapletta</a></p>
+                <p class="description">                </p>
             </div>
             <div class="contact-item">
                 <h3>English Blog</h3>
                 <p><a href="https://tom.sapletta.com/">tom.sapletta.com</a></p>
+                <p class="description">                </p>
             </div>
             <div class="contact-item">
-                <h3>Deutsch</h3>
+                <h3>Deutsch Blog</h3>
                 <p><a href="https://tom.sapletta.de/">tom.sapletta.de</a></p>
+                <p class="description">                </p>
             </div>
             <div class="contact-item">
-                <h3>Polski</h3>
+                <h3>Polski Blog</h3>
                 <p><a href="https://tom.sapletta.pl/">tom.sapletta.pl</a></p>
+                <p class="description">                </p>
             </div>
 
 
             <div class="contact-item">
-                <h3>Softreck</h3>
+                <h3>Softreck, Estonia</h3>
                 <p><a href="https://www.softreck.com/">Software Development</a>
             </div>
 
             <div class="contact-item">
-                <h3>Telemonit</h3>
+                <h3>Telemonit, Germany</h3>
                 <a href="https://www.telemonit.com/">Hardware Development</a></p>
             </div>
         </div>
     </div>
 
     <div class="tech-tag-cloud">
-        <h3>Areas of Expertise</h3>
+        <h3>Expertise Areas</h3>
         <div id="tech-tagss">
             <span class="tech-tag">Hypermodularity</span>
             <span class="tech-tag">ModDevOps</span>
@@ -256,15 +269,15 @@
     <!--        </div>-->
     <!--    </div>-->
 
-    <div class="section" id="opensource">
-        <h2>Open Source Projects</h2>
-        <div class="opensource-container">
-            <div class="opensource-item">
-                <h3><a href="https://modules.webstream.dev">Modules.webstream.dev</a></h3>
-                <p>WebStream modular solutions.</p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="section" id="opensource">-->
+<!--        <h2>Open Source Projects</h2>-->
+<!--        <div class="opensource-container">-->
+<!--            <div class="opensource-item">-->
+<!--                <h3><a href="https://modules.webstream.dev">Modules.webstream.dev</a></h3>-->
+<!--                <p>WebStream modular solutions.</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
 
     <div class="section" id="offer">
@@ -319,26 +332,27 @@
 <!--        </div>-->
 <!--    </div>-->
 
-    <div class="section" id="services">
-        <h2>SaaS Services</h2>
-        <div class="services-container">
-            <div class="service-item">
-                <h3><a href="https://www.saasisking.com">SaaS is the King</a></h3>
-            </div>
-            <!--            <div class="service-item">-->
-            <!--                <h3><a href="http://www.oneperson.services">OnePerson.Services</a></h3>-->
-            <!--                <p>Solo services</p>-->
-            <!--            </div>-->
-            <div class="service-item">
-                <h3><a href="http://www.automatyzer.com">Automatyzer.com</a></h3>
-                <p>Automation</p>
-            </div>
-            <div class="service-item">
-                <h3><a href="https://www.onedayrun.com/">OneDayRun.com</a></h3>
-                <p>One-day SaaS services</p>
-            </div>
-        </div>
-    </div>
+<!--    <div class="section" id="services">-->
+<!--        <h2>SaaS Services</h2>-->
+<!--        <div class="services-container">-->
+<!--            <div class="service-item">-->
+<!--                <h3><a href="https://www.saasisking.com">SaaS is the King</a></h3>-->
+<!--            </div>-->
+<!--                        <div class="service-item">-->
+<!--                            <h3><a href="http://www.oneperson.services">OnePerson.Services</a></h3>-->
+<!--                            <p>Solo services</p>-->
+<!--                        </div>-->
+<!--            <div class="service-item">-->
+<!--                <h3><a href="http://www.automatyzer.com">Automatyzer.com</a></h3>-->
+<!--                <p>Automation</p>-->
+<!--            </div>-->
+<!--            -->
+<!--            <div class="service-item">-->
+<!--                <h3><a href="https://www.onedayrun.com/">OneDayRun.com</a></h3>-->
+<!--                <p>One-day SaaS services</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <div class="section" id="domains">
         <h2>Internet Domains</h2>
