--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         });
       }
     </script>
+    
+    <!-- Load app as ES module -->
+    <script type="module" src="/assets/js/main.js"></script>
 </head>
         /* Loading and error states */
         #portfolio-loading {
